--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <header>Interests</header>
                         <ul>
                             <li>Gaming</li>
-                            <li>Ainme</li>
+                            <li>Anime</li>
                             <li>Food</li>
                         </ul>
                     </section>
